Hacked log in / out

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -114,7 +114,7 @@ input {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 0 80px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 0 80px inset;
   border-bottom: 1px solid #b7e1f5;
-  background-image: url('/images/grid.png?1326628386');
+  background-image: url('/images/grid.png?1326628222');
 }
 
 /* line 39, ../sass/style.sass */
@@ -124,27 +124,28 @@ input {
   background-color: #156489;
   border-top: 3px solid #0d5577;
   color: white;
+  min-height: 50px;
 }
 
-/* line 46, ../sass/style.sass */
+/* line 47, ../sass/style.sass */
 #history {
   padding: 20px 0 20px 5%;
   width: 40%;
   float: left;
 }
 
-/* line 51, ../sass/style.sass */
+/* line 52, ../sass/style.sass */
 #stats {
   padding: 20px 5% 20px 0;
   width: 40%;
   float: right;
 }
 
-/* line 59, ../sass/style.sass */
+/* line 60, ../sass/style.sass */
 #task-list {
   margin: auto;
 }
-/* line 61, ../sass/style.sass */
+/* line 62, ../sass/style.sass */
 #task-list li {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
@@ -152,7 +153,7 @@ input {
   text-align: center;
 }
 
-/* line 67, ../sass/style.sass */
+/* line 68, ../sass/style.sass */
 #prompt {
   font-size: 60px;
   font-family: "Montserrat", sans-serif;
@@ -165,7 +166,7 @@ input {
   text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 0px, rgba(0, 0, 0, 0.5) 0px -1px 0px;
 }
 
-/* line 79, ../sass/style.sass */
+/* line 80, ../sass/style.sass */
 #control-surface {
   width: 700px;
   margin: auto;
@@ -174,7 +175,7 @@ input {
   position: relative;
 }
 
-/* line 86, ../sass/style.sass */
+/* line 87, ../sass/style.sass */
 #slide-holder {
   height: 300px;
   width: 2800px;
@@ -182,7 +183,7 @@ input {
   top: 0px;
   left: 0px;
 }
-/* line 92, ../sass/style.sass */
+/* line 93, ../sass/style.sass */
 #slide-holder .slide {
   width: 700px;
   float: left;
@@ -191,7 +192,7 @@ input {
   position: relative;
 }
 
-/* line 99, ../sass/style.sass */
+/* line 100, ../sass/style.sass */
 #thedoing {
   font-size: 40px;
   text-transform: lowercase;
@@ -219,7 +220,7 @@ input {
   z-index: 1;
 }
 
-/* line 117, ../sass/style.sass */
+/* line 118, ../sass/style.sass */
 .history-title {
   font-size: 9px;
   font-family: "Montserrat", sans-serif;
@@ -231,7 +232,7 @@ input {
   margin-top: 20px;
 }
 
-/* line 127, ../sass/style.sass */
+/* line 128, ../sass/style.sass */
 ul#history-list li {
   list-style: none;
   font-family: Georgia, serif;
@@ -239,7 +240,7 @@ ul#history-list li {
   line-height: 24px;
   text-align: center;
 }
-/* line 133, ../sass/style.sass */
+/* line 134, ../sass/style.sass */
 ul#history-list li .history-date {
   font-size: 10px;
   line-height: 24px;
@@ -247,7 +248,7 @@ ul#history-list li .history-date {
   color: #cccccc;
   font-family: Helvetica, Arial, sans-serif;
 }
-/* line 139, ../sass/style.sass */
+/* line 140, ../sass/style.sass */
 ul#history-list li .history-elapsed {
   font-size: 20px;
   margin-left: 20px;
@@ -255,17 +256,17 @@ ul#history-list li .history-elapsed {
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
   font-family: Georgia, serif;
 }
-/* line 145, ../sass/style.sass */
+/* line 146, ../sass/style.sass */
 ul#history-list li .history-slash {
   color: #cccccc;
   font-size: 10px;
 }
-/* line 148, ../sass/style.sass */
+/* line 149, ../sass/style.sass */
 ul#history-list li .history-target {
   font-size: 10px;
   color: #dddddd;
 }
-/* line 151, ../sass/style.sass */
+/* line 152, ../sass/style.sass */
 ul#history-list li .history-ratio {
   font-size: 20px;
   margin-left: 20px;
@@ -274,13 +275,13 @@ ul#history-list li .history-ratio {
   font-family: Georgia, serif;
 }
 
-/* line 160, ../sass/style.sass */
+/* line 161, ../sass/style.sass */
 .time {
   font-family: Georgia, serif;
   font-weight: normal;
 }
 
-/* line 164, ../sass/style.sass */
+/* line 165, ../sass/style.sass */
 h2 {
   font-family: Georgia, sans-serif;
   font-style: italic;
@@ -288,7 +289,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* line 170, ../sass/style.sass */
+/* line 171, ../sass/style.sass */
 h3 {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -300,7 +301,7 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 180, ../sass/style.sass */
+/* line 181, ../sass/style.sass */
 h4 {
   font-size: 12px;
   font-family: "Montserrat", sans-serif;
@@ -312,7 +313,7 @@ h4 {
   text-transform: uppercase;
 }
 
-/* line 190, ../sass/style.sass */
+/* line 191, ../sass/style.sass */
 h5 {
   font-family: Georgia, sans-serif;
   font-style: normal;
@@ -321,7 +322,7 @@ h5 {
   margin-top: 10px;
 }
 
-/* line 197, ../sass/style.sass */
+/* line 198, ../sass/style.sass */
 h6 {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
@@ -334,7 +335,7 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 208, ../sass/style.sass */
+/* line 209, ../sass/style.sass */
 #logo {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -348,7 +349,7 @@ h6 {
   float: left;
 }
 
-/* line 220, ../sass/style.sass */
+/* line 221, ../sass/style.sass */
 #welcome {
   float: right;
   font-family: Georgia, serif;
@@ -361,12 +362,12 @@ h6 {
   margin-right: 15px;
 }
 
-/* line 231, ../sass/style.sass */
+/* line 232, ../sass/style.sass */
 .clear {
   clear: both;
 }
 
-/* line 234, ../sass/style.sass */
+/* line 235, ../sass/style.sass */
 .stat {
   font-family: Georgia, serif;
   color: white;
@@ -377,7 +378,7 @@ h6 {
   margin-top: 10px;
 }
 
-/* line 243, ../sass/style.sass */
+/* line 244, ../sass/style.sass */
 .stat-title {
   font-size: 9px;
   font-family: "Montserrat", sans-serif;
@@ -388,7 +389,7 @@ h6 {
   margin-bottom: 8px;
 }
 
-/* line 252, ../sass/style.sass */
+/* line 253, ../sass/style.sass */
 .stat-description {
   font-family: Georgia, serif;
   color: white;
@@ -400,14 +401,14 @@ h6 {
   margin-bottom: 20px;
 }
 
-/* line 262, ../sass/style.sass */
+/* line 263, ../sass/style.sass */
 #time-stats {
   float: left;
   width: 360px;
   margin-right: 60px;
 }
 
-/* line 267, ../sass/style.sass */
+/* line 268, ../sass/style.sass */
 #time-remaining {
   font-family: Georgia, serif;
   font-size: 140px;
@@ -416,25 +417,25 @@ h6 {
   margin-bottom: 50px;
 }
 
-/* line 274, ../sass/style.sass */
+/* line 275, ../sass/style.sass */
 #midtask-options {
   float: right;
   width: 235px;
 }
 
-/* line 278, ../sass/style.sass */
+/* line 279, ../sass/style.sass */
 #time-stats-left {
   float: left;
   width: 140px;
 }
 
-/* line 282, ../sass/style.sass */
+/* line 283, ../sass/style.sass */
 #time-stats-right {
   float: right;
   width: 140px;
 }
 
-/* line 287, ../sass/style.sass */
+/* line 288, ../sass/style.sass */
 button {
   display: inline-block;
   margin: 0 2px;
@@ -457,23 +458,23 @@ button {
   box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
 }
 
-/* line 301, ../sass/style.sass */
+/* line 302, ../sass/style.sass */
 button:hover, input[type="submit"].button:hover {
   text-decoration: none;
 }
 
-/* line 304, ../sass/style.sass */
+/* line 305, ../sass/style.sass */
 button:active, input[type="submit"].button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 308, ../sass/style.sass */
+/* line 309, ../sass/style.sass */
 .small {
   font-size: 12px;
 }
 
-/* line 311, ../sass/style.sass */
+/* line 312, ../sass/style.sass */
 .set-time-button {
   font-size: 25px;
   font-weight: bold;
@@ -511,13 +512,13 @@ button:active, input[type="submit"].button:active {
   left: 50%;
   z-index: 2;
 }
-/* line 325, ../sass/style.sass */
+/* line 326, ../sass/style.sass */
 .set-time-button:active {
   position: absolute;
   top: 50px;
 }
 
-/* line 329, ../sass/style.sass */
+/* line 330, ../sass/style.sass */
 .catchphrase {
   position: absolute;
   width: 300px;
@@ -527,7 +528,7 @@ button:active, input[type="submit"].button:active {
   margin-left: -150px;
 }
 
-/* line 337, ../sass/style.sass */
+/* line 338, ../sass/style.sass */
 #minutes {
   position: absolute;
   left: 50%;
@@ -537,7 +538,7 @@ button:active, input[type="submit"].button:active {
   z-index: 4;
 }
 
-/* line 345, ../sass/style.sass */
+/* line 346, ../sass/style.sass */
 #time-muncher {
   font-size: 80px;
   -moz-border-radius: 150px;
@@ -559,7 +560,7 @@ button:active, input[type="submit"].button:active {
   z-index: 3;
   border: solid 1px #f0c683;
 }
-/* line 360, ../sass/style.sass */
+/* line 361, ../sass/style.sass */
 #time-muncher:hover {
   border: solid 2px #eaa12d;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
@@ -570,7 +571,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 364, ../sass/style.sass */
+/* line 365, ../sass/style.sass */
 .time-minus-button {
   font-size: 25px;
   font-weight: bold;
@@ -608,7 +609,7 @@ button:active, input[type="submit"].button:active {
   z-index: 2;
 }
 
-/* line 378, ../sass/style.sass */
+/* line 379, ../sass/style.sass */
 .time-plus-button {
   font-size: 25px;
   font-weight: bold;
@@ -646,7 +647,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 392, ../sass/style.sass */
+/* line 393, ../sass/style.sass */
 .set-name-button {
   font-weight: bold;
   position: absolute;
@@ -657,7 +658,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 401, ../sass/style.sass */
+/* line 402, ../sass/style.sass */
 .midtask {
   width: 230px;
   margin: 15px auto;
@@ -665,7 +666,7 @@ button:active, input[type="submit"].button:active {
   line-height: 31px;
 }
 
-/* line 407, ../sass/style.sass */
+/* line 408, ../sass/style.sass */
 .logout {
   font-size: 8px;
   text-transform: uppercase;
@@ -674,7 +675,7 @@ button:active, input[type="submit"].button:active {
   margin-left: 3px;
 }
 
-/* line 415, ../sass/style.sass */
+/* line 416, ../sass/style.sass */
 .white {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -687,7 +688,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 421, ../sass/style.sass */
+/* line 422, ../sass/style.sass */
 .white:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ededed), color-stop(100%, #ededed));
   background-image: -webkit-linear-gradient(#ededed, #ededed);
@@ -697,7 +698,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ededed, #ededed);
 }
 
-/* line 424, ../sass/style.sass */
+/* line 425, ../sass/style.sass */
 .white:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
@@ -708,7 +709,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#dddddd, #ffffff);
 }
 
-/* line 428, ../sass/style.sass */
+/* line 429, ../sass/style.sass */
 .orange {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -721,7 +722,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #f0c683);
 }
 
-/* line 434, ../sass/style.sass */
+/* line 435, ../sass/style.sass */
 .orange:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0c683), color-stop(100%, #f0c683));
   background-image: -webkit-linear-gradient(#f0c683, #f0c683);
@@ -731,7 +732,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#f0c683, #f0c683);
 }
 
-/* line 437, ../sass/style.sass */
+/* line 438, ../sass/style.sass */
 .orange:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0c683), color-stop(100%, #ffffff));
@@ -742,7 +743,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#f0c683, #ffffff);
 }
 
-/* line 441, ../sass/style.sass */
+/* line 442, ../sass/style.sass */
 #overlay {
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
@@ -755,7 +756,7 @@ button:active, input[type="submit"].button:active {
   z-index: 100;
   display: none;
 }
-/* line 449, ../sass/style.sass */
+/* line 450, ../sass/style.sass */
 #overlay #overlay-wrap {
   width: 600px;
   position: relative;
@@ -765,7 +766,7 @@ button:active, input[type="submit"].button:active {
   margin-top: -250px;
   margin-left: -300px;
 }
-/* line 457, ../sass/style.sass */
+/* line 458, ../sass/style.sass */
 #overlay h1 {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
@@ -776,14 +777,14 @@ button:active, input[type="submit"].button:active {
   text-transform: lowercase;
   margin-bottom: 30px;
 }
-/* line 466, ../sass/style.sass */
+/* line 467, ../sass/style.sass */
 #overlay h2 {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
   text-align: center;
   margin-bottom: 40px;
 }
-/* line 471, ../sass/style.sass */
+/* line 472, ../sass/style.sass */
 #overlay .overlay-yes {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -799,7 +800,7 @@ button:active, input[type="submit"].button:active {
   height: 200px;
   width: 200px;
 }
-/* line 480, ../sass/style.sass */
+/* line 481, ../sass/style.sass */
 #overlay .overlay-no-top {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -817,12 +818,12 @@ button:active, input[type="submit"].button:active {
   width: 355px;
   text-align: left;
 }
-/* line 491, ../sass/style.sass */
+/* line 492, ../sass/style.sass */
 #overlay .overlay-no-top span {
   font-size: 17px;
   line-height: 90px;
 }
-/* line 494, ../sass/style.sass */
+/* line 495, ../sass/style.sass */
 #overlay .overlay-no-bottom {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -839,7 +840,7 @@ button:active, input[type="submit"].button:active {
   width: 355px;
   text-align: left;
 }
-/* line 504, ../sass/style.sass */
+/* line 505, ../sass/style.sass */
 #overlay .overlay-no-bottom span {
   font-size: 17px;
   line-height: 90px;
