--- a/sass/style.sass
+++ b/sass/style.sass
@@ -42,6 +42,7 @@ input
 	background-color: #156489
 	border-top: 3px solid #0d5577
 	color: white
+	min-height: 50px
 	
 #history
 	padding: 20px 0 20px 5%
